--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,5 +75,18 @@
   }
   html, body {
     overflow-x: hidden;
+    max-width: 100vw;
+  }
+  #__next {
+    overflow-x: hidden;
+    max-width: 100vw;
+  }
+  * {
+    max-width: 100%;
+    box-sizing: border-box;
+  }
+  img, svg, video {
+    max-width: 100%;
+    height: auto;
   }
 }
